--- a/style.css
+++ b/style.css
@@ -1,121 +1,3 @@
-*, 
-*::before, 
-*::after{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-:root{
-    --orange: #f7c08a;
-}
-body{
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.2rem;
-    line-height: 1.5;
-}
-li{
-    list-style: none;
-}
-
-h1{
-    font-size: 2.5rem;
-}
-button{
-    font: inherit;
-    background: none;
-    border: none;
-}
-img, picture, source{
-    max-width: 100%;
-    height: auto;
-}
-/* component styles */
-.flex{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.wrapper{
-    max-width: 1200px;
-    margin-inline: auto;
-    padding-inline: 2rem;
-}
-.clearfix::after{
-    content: "";
-    display: block;
-    height: 0;
-    clear: both;
-}
-.btn-component{
-    background: none;
-    border: none;
-    display: inline-block;
-    padding: 1rem 1rem;
-    border-radius: 8px;
-}
-header{
-    background-color: black;
-    
-}
-header h2{
-    align-self: center;
-}
-
-header li{
-    padding: 1.5rem 1rem;
-    text-align: center;
-}
-header li:hover{
-    color: var(--orange);
-    background-color: rgba(238, 238, 238, 0.1);
-}
-.header-flex > *{
-    display: inline-block;
-    width: 49%;
-}
-
-.header-layout > *{
-    margin: 0px;
-    width:49.5%;
-    display: inline-block;
-}
-.nav-flex > *{
-    display: inline-block;
-    width: 23.5%;
-}
-
-@media (max-width: 800px){
-    .header-layout > *{
-        width: 100%;
-        padding-block: .5rem;
-    }
-    .header-nav{
-        display: none;
-        /* display: none; */
-    }
-    .show-dropdown{
-        display: block;
-    }
-    .nav-flex > *{
-        width: 100%;
-    }
-}
-.menu-toggle{
-    align-self: center;
-    width: 30px;
-    display: none;
-}
-@media (max-width: 800px){
-    .menu-toggle{
-        display: block;
-        margin-left: auto;
-    }
-}
-.active{
-    color: var(--orange);
-    background-color: rgba(238, 238, 238, 0.1);
-}
 .hero{
     display: flex;
     flex-direction: column;
@@ -167,6 +49,9 @@ header li:hover{
     .card-wrapper{
         width: 100%;
     }
+    .card-img{
+        display: none;
+    }
 }
 .card-content{
     margin: 3rem 2rem;
@@ -174,8 +59,9 @@ header li:hover{
 .card-content > *~*{
     margin-top: 1.5rem;
 }
-.content-btn{
+.card-content button{
     background-color: white;
+    
 }
 /* boxes */
 .boxes{
@@ -214,13 +100,4 @@ header li:hover{
     display: inline-block;
     width: 50px;
     text-align: center;
-}
-footer{
-    text-align: center;
-    padding-block: 2rem;
-    background-color: #333;
-}
-footer p{
-    display: inline-block;
-    vertical-align: middle;
 }
